--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     <h1 style="position: relative; z-index: 20;">this is cool gaem click buton foer moneh</h1>
     <div id="score">moolah: 0</div>
     <button id="clickBtn">click for MONEY🤑</button>
-    <button id="shopBtn" style="position:relative; z-index:20;">buy cool stuff</button>
+    <button id="shopBtn" style="position:relative; z-index:20;">shop</button>
     <button id="basketballBTN" style="position:relative; z-index:20;">basketball spawn</button>
+    <h1>disclaimer: not real money.</h1>
     <button id="secretBtn" style="position:fixed; bottom:10px; right:10px; z-index:20;"> </button>
     
     <script>
