--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>clicker gaem.</title>
+    <title>THE clicker game</title>
     <link rel="icon" type="image/png" href="clickc.jpg">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <style>
@@ -38,7 +38,7 @@
 <body>
     <!-- Home Screen -->
     <div id="homeScreen">
-        <h1 style="font-size:3em; color:rgb(0, 0, 0); margin-bottom:10px;">clicker gaem.</h1>
+        <h1 style="font-size:3em; color:rgb(0, 0, 0); margin-bottom:10px;">the clicker game</h1>
         <button id="playBtn">play</button>
     </div>
 
@@ -281,3 +281,4 @@
     </script>
 </body>
 </html>
+
