Update index.html and website

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="score">clicks: 0</div>
     <button id="clickBtn" style="color:black;">click for clicks</button>
     <button id="shopBtn" style="position:relative; z-index:20; color: rgb(0, 0, 0); background-color: gold;">shop</button>
-
+    <h1><strong>cool stuff</strong></h1>
     <button id="secretBtn" style="position:fixed; bottom:10px; right:10px; z-index:20;"> </button>
     
     <!-- Highest Score Display -->
@@ -281,4 +281,5 @@
     </script>
 </body>
 </html>
+
 
