Update index.html and website

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>THE clicker game</title>
-    <link rel="icon" type="image/png" href="clickc.jpg">
+    <link rel="icon" type="image/png" href="mouse.png">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
     <style>
         body { background-color: rgb(0, 255, 0); font-family: Arial; text-align: center; margin-top: 50px; overflow: hidden; }
@@ -280,6 +280,7 @@
     </script>
 </body>
 </html>
+
 
 
 
