--- a/info.html
+++ b/info.html
@@ -29,7 +29,7 @@
 </body>
 <body>
     <p><a href="index.html">Back to Game</a></p>
-    <p><a href="index.html">Go to homepage!</a> (not out yet.)</p>
+    <p><a href="homepage.html">Go to homepage!</a></p>
     <h1>Clicker Game Information</h1>
     <p>Welcome to the Clicker Game! This game is a simple yet addictive clicker game where you can earn clicks by clicking a button and use those clicks to purchase upgrades in the shop.</p>
     <h2>How to Play</h2>
