Update Homepage.html and website

--- a/Homepage.html
+++ b/Homepage.html
@@ -56,3 +56,5 @@
     <p><a href="index.html"> the Clicker game</a></p>
     <p><a href="info.html">Info page</a></p>
     <p><a href="sigma.html">Sigma game</a></p>
+</body>
+</html>
