Update info.html and website

--- a/info.html
+++ b/info.html
@@ -29,7 +29,7 @@
 </body>
 <body>
     <p><a href="index.html">Back to Game</a></p>
-    <p><a href="homepage.html">Go to homepage!</a></p>
+    <p><a href="homepageforclickergame.html">Go to homepage!</a></p>
     <h1>Clicker Game Information</h1>
     <p>Welcome to the Clicker Game! This game is a simple yet addictive clicker game where you can earn clicks by clicking a button and use those clicks to purchase upgrades in the shop.</p>
     <h2>How to Play</h2>
@@ -47,4 +47,5 @@
     <h1>I will list more updates here!</h1>
     <p>Thank you for playing the Clicker Game! If you have any feedback or suggestions, feel free to contact me.</p>
     <p>Enjoy clicking!</p>
+
     <p>Email to contact. <a>Fortknox1501@gmail.com</a></p>
